# git-meta

cpp/: CMakeLists.txt  TODO.md  qmeta.cpp
cpp/lib/cmd/: CMakeLists.txt  command.hpp  root.cpp  root.hpp
cpp/lib/core/: CMakeLists.txt  error.cpp  error.h  error.hpp  git_repository.cpp  git_repository.hpp
cpp/lib/util/: CMakeLists.txt  git_util.cpp  git_util.h  git_util.hpp
node/lib/util/: git_util.js
